--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.5",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-toastify": "^9.0.3",
+    "react-top-loading-bar": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
